# kursova_lab4

./: CMakeLists.txt  Makefile
src/: main.cpp
